# survex

./: .gitignore  CMakeLists.txt  config.h  messages.cmake  survex.qbs
lib/: po-to-msg.pl
share/survex/: ca.msg  de_CH.msg  de_DE.msg  en.msg  en_US.msg  es.msg  fr.msg  it.msg  pt.msg  pt_BR.msg  ro.msg  sk.msg
src/: aboutdlg.h  aven.cc  aven.h  avenprcore.h  aventreectrl.h  cavern.c  cavern.h  cavernlog.cc  cavernlog.h  cmdline.c  cmdline.h  commands.c  config.h.in  datain.c  debug.h  diffpos.c  dump3d.c  export.h  exportfilter.h  extend.c  filename.c  getopt.c  getopt.h  getopt1.c  gfxcore.h  gla-gl.cc  gla.h  glbitmapfont.cc  glbitmapfont.h  guicontrol.h  img.c  listpos.c  log.h  mainfrm.h  matrix.c  message.c  model.h  netartic.c  netbits.c  readval.c  (+5 more)
src/msvc/: config.h.in
